--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "dayfox-vsc",
-  "displayName": "Dayfox",
-  "description": "Port of the Dayfox variant from EdenEast/nightfox.nvim",
-  "homepage": "https://github.com/michalpopek/dayfox-vsc/blob/main/README.md",
+  "name": "nordfox-vsc",
+  "displayName": "Nordfox",
+  "description": "Port of the Nordfox variant from EdenEast/nightfox.nvim",
+  "homepage": "https://github.com/Fr4nk1inCs/nordfox-vsc/blob/main/README.md",
   "bugs": {
-    "url": "https://github.com/michalpopek/dayfox-vsc/issues"
+    "url": "https://github.com/Fr4nk1inCs/nordfox-vsc/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/michalpopek/dayfox-vsc.git"
+    "url": "https://github.com/Fr4nk1inCs/nordfox-vsc.git"
   },
-  "publisher": "michalpopek",
+  "publisher": "Fr4nk1in",
   "version": "0.1.0",
   "engines": {
     "vscode": "^1.79.0"
@@ -21,23 +21,30 @@
   "contributes": {
     "themes": [
       {
-        "label": "Dayfox",
-        "uiTheme": "vs",
-        "path": "./themes/dayfox-color-theme.json"
+        "label": "Nordfox",
+        "uiTheme": "vs-dark",
+        "path": "./themes/nordfox.json"
       }
     ]
   },
-  "icon": "resources/images/logo.png",
+  "icon": "images/logo.png",
   "scripts": {
     "package": "vsce package"
   },
   "devDependencies": {
-    "@vscode/vsce": "^2.19.0",
+    "@vscode/vsce": "^2.32.0",
     "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
-    "simple-git-hooks": "^2.8.1"
+    "pretty-quick": "^3.3.1",
+    "simple-git-hooks": "^2.11.1"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm pretty-quick --staged"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@vscode/vsce-sign",
+      "keytar",
+      "simple-git-hooks"
+    ]
   }
 }
