--- a/package.json
+++ b/package.json
@@ -32,19 +32,6 @@
     "package": "vsce package"
   },
   "devDependencies": {
-    "@vscode/vsce": "^2.32.0",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.3.1",
-    "simple-git-hooks": "^2.11.1"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm pretty-quick --staged"
-  },
-  "pnpm": {
-    "ignoredBuiltDependencies": [
-      "@vscode/vsce-sign",
-      "keytar",
-      "simple-git-hooks"
-    ]
+    "@vscode/vsce": "^3.2.2"
   }
 }
